[gd_scene load_steps=3 format=3 uid="uid://bdr7cror1vn2t"]

[ext_resource type="Script" uid="uid://teutkhytf5so" path="res://GUI/OptionsMenu.gd" id="1_8opyd"]
[ext_resource type="PackedScene" uid="uid://c7osil6s5ri2r" path="res://GUI/settings.tscn" id="2_xar5d"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8opyd")
metadata/_edit_lock_ = true

[node name="mainPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.248
anchor_top = 0.339
anchor_right = 0.766
anchor_bottom = 0.681
offset_left = -50.696
offset_top = -127.672
offset_right = 68.568
offset_bottom = 77.712
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="mainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -276.0
offset_top = 92.0
offset_right = 300.0
offset_bottom = 156.0
grow_horizontal = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Settings")
theme_override_font_sizes/font_size = 30
text = "Back To Game"

[node name="Settings" type="Button" parent="mainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -29.5
offset_right = 302.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Back")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_font_sizes/font_size = 39
text = "Settings"

[node name="Quit" type="Button" parent="mainPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 86.0
offset_top = 278.0
offset_right = -54.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Back")
theme_override_font_sizes/font_size = 34
text = "Quit Game"

[node name="SettingsContainer" parent="." instance=ExtResource("2_xar5d")]
unique_name_in_owner = true
layout_mode = 1
offset_top = -267.5
offset_bottom = 267.5

[connection signal="pressed" from="mainPanel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="mainPanel/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="mainPanel/Quit" to="." method="_on_quit_pressed"]
